--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app='myShop'>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <title>My Shop</title>
 
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 
         <style type="text/css">
             .scrollable-menu {
@@ -16,11 +15,9 @@
                 overflow-x: hidden;
             }
         </style>
-
     </head>
 
-    <body>
-
+    <body ng-controller="headerController">
     <div class="container">
         <div class="header">
             <nav class="navbar navbar-default" role="navigation">
@@ -41,67 +38,60 @@
                             <li><a>Showing {{}} of {{}}</a></li>
                         </ul>
 
-
                         <ul class="nav navbar-nav navbar-right">
 
-                            <li><a href="#">SORT BY</a></li>
+                            <li><a>SORT BY</a></li>
                             <li class="navbar-form">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default">Цене</button>
+                                    <button id="dropdown-menu-sort-by" type="button" class="btn btn-default">OneSort</button>
                                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                         <span class="caret"></span>
                                         <span class="sr-only">Меню с переключением</span>
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">Цене</a></li>
-                                        <li><a href="#">Имени</a></li>
+                                        <li ng-repeat="itemSortBy in listHeaderDropdownMenuItems.sortBy">
+                                            <a ng-click="sortByClick(itemSortBy)">{{itemSortBy}}</a>
+                                        </li>
                                     </ul>
                                 </div>
                             </li>
 
-                            <li><a href="#">PAGE SIZE</a></li>
+                            <li><a>PAGE SIZE</a></li>
                             <li class="navbar-form">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default">16 per page</button>
+                                    <button id="dropdown-menu-page-size" type="button" class="btn btn-default">16 per page</button>
                                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                         <span class="caret"></span>
                                         <span class="sr-only">Меню с переключением</span>
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">16 per page</a></li>
-                                        <li><a href="#">32 per page</a></li>
-                                        <li><a href="#">64 per page</a></li>
+                                        <li ng-repeat="itemPageSize in listHeaderDropdownMenuItems.pageSize">
+                                            <a ng-click="pageSizeClick(itemPageSize)">{{itemPageSize}}</a>
+                                        </li>
                                     </ul>
                                 </div>
                             </li>
 
-                            <li><a href="#">Page</a></li>
+                            <li><a>Page</a></li>
                             <li class="navbar-form">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default">1</button>
+                                    <button id="dropdown-menu-page" type="button" class="btn btn-default">1</button>
                                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                         <span class="caret"></span>
                                         <span class="sr-only">Меню с переключением</span>
                                     </button>
                                     <ul class="dropdown-menu scrollable-menu" role="menu">
-                                        <li><a href="#">1</a></li>
-                                        <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
-                                        <li><a href="#">4</a></li>
-                                        <li><a href="#">5</a></li>
-                                        <li><a href="#">6</a></li>
-                                        <li><a href="#">7</a></li>
-                                        <li><a href="#">8</a></li>
-                                        <li><a href="#">9</a></li>
-                                        <li><a href="#">10</a></li>
+                                        <li ng-repeat="itemPage in listHeaderDropdownMenuItems.page">
+                                            <a ng-click="pageClick(itemPage)">{{itemPage}}</a>
+                                        </li>
                                     </ul>
                                 </div>
 
                             </li>
 
                             <li class="navbar-form">
-                                <button type="button" class="btn btn-default"><</button>
-                                <button type="button" class="btn btn-default">></button>
+                                <button type="button" class="btn btn-default" ng-click="previousPageClick()"><</button>
+                                <button type="button" class="btn btn-default" ng-click="nextPageClick()">></button>
                             </li>
 
                         </ul>
@@ -113,8 +103,84 @@
 
     </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <div>
+
+
+        <table class="table table-striped" >
+        <thead>
+        <tr>
+            <th>Товар</th>
+            <th>Цена</th>
+            <th>Куплено</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="item in list.items">
+            <td>{{item.purchase}}</td>
+            <td>{{item.price}}</td>
+            <td><input type="checkbox" ng-model="item.done" /></td>
+        </tr>
+        </tbody>
+    </table>
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular.min.js"></script>
+        <script>
+          var model = {
+            items: [
+              { purchase: "Хлеб", done: false, price: 15.9 },
+              { purchase: "Масло", done: false, price: 60 },
+              { purchase: "Картофель", done: true, price: 22.6 },
+            ]
+          };
+
+          var headerDropdownMenuItems = {
+            sortBy: ["OneSort","TwoSort"],
+            pageSize: ["16 per page","30 per page","50 per page"],
+            page: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
+          };
+
+          var currentSettingHeaderDropMenu = {};
+          currentSettingHeaderDropMenu.sortBy = headerDropdownMenuItems.sortBy[0];
+          currentSettingHeaderDropMenu.pageSize = headerDropdownMenuItems.pageSize[0];
+          currentSettingHeaderDropMenu.page = headerDropdownMenuItems.page[0];
+
+          var myShop = angular.module("myShop", []);
+          myShop.controller("headerController", function ($scope) {
+            $scope.list = model;
+
+            $scope.listHeaderDropdownMenuItems = headerDropdownMenuItems;
+            $scope.currentSettingHeaderDropMenu = currentSettingHeaderDropMenu;
+
+            $scope.sortByClick = function (typeSort){
+              console.log('typeSort: ',typeSort);
+              angular.element(document.querySelector('#dropdown-menu-sort-by')).text(typeSort);
+
+            };
+
+            $scope.pageSizeClick = function (pageSize){
+              console.log('pageSize: ',pageSize);
+              angular.element(document.querySelector('#dropdown-menu-page-size')).text(pageSize);
+            };
+
+            $scope.pageClick = function (page){
+              console.log('page: ', page);
+              angular.element(document.querySelector('#dropdown-menu-page')).text(page);
+            };
+
+            $scope.previousPageClick = function (){
+              console.log('previousPageClick');
+            };
+
+            $scope.nextPageClick = function (){
+              console.log('nextPageClick');
+            };
+
+          });
+
+        </script>
     </body>
 </html>
