structuring of the project

--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>My Shop</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-
-        <style type="text/css">
-            .scrollable-menu {
-                height: auto;
-                max-height: 200px;
-                overflow-x: hidden;
-            }
-        </style>
+        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body ng-controller="headerController">
@@ -115,296 +109,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular.min.js"></script>
-        <script>
-
-          goods = [
-            {
-              id: 1,
-              title: 'werwer',
-              description: 'text',
-              picture: 'pic',
-              price: 125
-            },
-            {
-              id: 2,
-              title: 'macbook',
-              description: 'text',
-              picture: 'pic',
-              price: 34
-            },
-            {
-              id: 3,
-              title: 'acer',
-              description: 'text',
-              picture: 'pic',
-              price: 12
-            },
-            {
-              id: 4,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 5,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 6,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 7,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 8,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 9,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 10,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 11,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 12,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 13,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 14,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 15,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 16,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 17,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 18,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 19,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 20,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 21,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 22,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 23,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 24,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 25,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 26,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 27,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 28,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 29,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            },
-            {
-              id: 30,
-              title: 'text',
-              description: 'text',
-              picture: 'pic',
-              price: 0
-            }
-          ];
-
-
-          var myShop = angular.module("myShop", []);
-          myShop.controller("headerController", function ($scope) {
-
-            $scope.listGoods = goods;
-
-            $scope.numberOfGoods = 1;
-
-            if (goods != null) {
-              $scope.numberOfGoods = goods.length;
-            }
-
-            // Init header DropMenu settings
-            var headerDropdownMenuItems = {
-              sortBy: ["none", "name", "price"],
-              pageSize: [8, 12, 16, 20, 24, 28],
-              page: [1]
-            };
-
-            $scope.sortParam = '';
-            $scope.listHeaderDropdownMenuItems = headerDropdownMenuItems;
-            $scope.currentSortBy = headerDropdownMenuItems.sortBy[0];
-            $scope.currentPageSize = headerDropdownMenuItems.pageSize[0];
-            $scope.currentPage = 1;
-            $scope.numberOfPages = Math.ceil($scope.numberOfGoods / $scope.currentPageSize);
-            headerDropdownMenuItems.page.length = 0;
-            for (var i = 1; i <= $scope.numberOfPages; i++) {
-              headerDropdownMenuItems.page.push(i);
-            }
-
-            // events
-            $scope.sortByClick = function (typeSort) {
-              $scope.currentSortBy = typeSort;
-              // none sort
-              if ($scope.currentSortBy == headerDropdownMenuItems.sortBy[0]) $scope.sortParam = '';
-                // name sort
-                else if ($scope.currentSortBy == headerDropdownMenuItems.sortBy[1]) $scope.sortParam = 'title';
-                    // price sort
-                    else if ($scope.currentSortBy == headerDropdownMenuItems.sortBy[2]) $scope.sortParam = 'price';
-            };
-
-            $scope.pageSizeClick = function (pageSize) {
-              $scope.currentPageSize = pageSize;
-              $scope.currentPage = 1;
-              $scope.numberOfPages = Math.ceil($scope.numberOfGoods / $scope.currentPageSize);
-              headerDropdownMenuItems.page.length = 0;
-              for (var i = 1; i <= $scope.numberOfPages; i++) {
-                headerDropdownMenuItems.page.push(i);
-              }
-            };
-
-            $scope.pageClick = function (page) {
-              $scope.currentPage = page;
-            };
-
-            $scope.previousPageClick = function () {
-              if ($scope.currentPage - 1 != 0)
-                $scope.currentPage--;
-            };
-
-            $scope.nextPageClick = function () {
-              if ($scope.currentPage + 1 <= headerDropdownMenuItems.page.length)
-                $scope.currentPage++;
-            };
-
-            $scope.isDisablePreviousPageButton = function () {
-              return $scope.currentPage == 1;
-            };
-
-            $scope.isDisableNextPageButton = function () {
-              return $scope.currentPage == $scope.numberOfPages;
-            };
-
-          });
-
-        </script>
+        <script src="js/goods.js"></script>
+        <script src="js/controller.js"></script>
     </body>
 </html>
