--- a/index.html
+++ b/index.html
@@ -1,115 +1,136 @@
 <!DOCTYPE html>
 <html ng-app='myShop'>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>My Shop</title>
+    <title>My Shop</title>
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/index.css">
-    </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/index.css">
+</head>
 
-    <body ng-controller="headerController">
-    <div class="container">
-        <div class="header">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a>Showing {{(currentPage - 1) * currentPageSize + 1}}-{{currentPage != numberOfPages ? (currentPage - 1)
-                                * currentPageSize + currentPageSize : numberOfGoods}} of
-                                {{numberOfGoods}}</a></li>
-                        </ul>
-
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a>SORT BY</a></li>
-                            <li class="navbar-form">
-                                <div class="btn-group">
-                                    <button id="dropdown-menu-sort-by" type="button" class="btn btn-default">{{currentSortBy}}</button>
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Меню с переключением</span>
-                                    </button>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li ng-repeat="itemSortBy in listHeaderDropdownMenuItems.sortBy">
-                                            <a ng-click="sortByClick(itemSortBy)">{{itemSortBy}}</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-
-                            <li><a>PAGE SIZE</a></li>
-                            <li class="navbar-form">
-                                <div class="btn-group">
-                                    <button id="dropdown-menu-page-size" type="button" class="btn btn-default">{{currentPageSize}} per page</button>
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Меню с переключением</span>
-                                    </button>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li ng-repeat="itemPageSize in listHeaderDropdownMenuItems.pageSize">
-                                            <a ng-click="pageSizeClick(itemPageSize)">{{itemPageSize}} per page</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-
-                            <li><a>Page</a></li>
-                            <li class="navbar-form">
-                                <div class="btn-group">
-                                    <button id="dropdown-menu-page" type="button" class="btn btn-default">{{currentPage}}</button>
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Меню с переключением</span>
-                                    </button>
-                                    <ul class="dropdown-menu scrollable-menu" role="menu">
-                                        <li ng-repeat="itemPage in listHeaderDropdownMenuItems.page">
-                                            <a ng-click="pageClick(itemPage)">{{itemPage}}</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li><a>of {{numberOfPages}}</a></li>
-
-                            <li class="navbar-form">
-                                <button type="button" class="btn btn-default" ng-disabled="isDisablePreviousPageButton()" ng-click="previousPageClick()"><</button>
-                                <button type="button" class="btn btn-default" ng-disabled="isDisableNextPageButton()" ng-click="nextPageClick()">></button>
-                            </li>
-
-                        </ul>
-                    </div>
+<body ng-controller="headerController">
+<div class="container-fluid">
+    <div class="header">
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
-            </nav>
 
-        </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li class="navbar-form">
+                            <label>Showing {{(currentPage - 1) * currentPageSize + 1}}-{{currentPage != numberOfPages ? (currentPage - 1)
+                            * currentPageSize + currentPageSize : numberOfGoods}} of
+                            {{numberOfGoods}}</label>
+                        </li>
 
-        <div class="col col-md-3" ng-repeat="itemGoods in listGoods | orderBy:sortParam | limitTo : currentPageSize : (currentPage - 1) * currentPageSize">
-            <div class="panel panel-default">
-                <h3 align="center">id: {{itemGoods.id}}</h3>
-                <h3 align="center">title: {{itemGoods.title}}</h3>
-                <h3 align="center">description: {{itemGoods.description}}</h3>
-                <h3 align="center">picture: {{itemGoods.picture}}</h3>
-                <h3 align="center">price: {{itemGoods.price}}</h3>
+                        <li class="navbar-form">
+                            <div class="form-group">
+                                <label >Search:</label>
+                                <input ng-model="query[queryBy]" class="form-control" placeholder="input text">
+                                <label >by</label>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default">{{currentSearchBy}}</button>
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                    <span class="caret"></span>
+                                    <span class="sr-only">Меню с переключением</span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li ng-repeat="itemSearchBy in listHeaderDropdownMenuItems.searchBy">
+                                        <a ng-click="searchByClick(itemSearchBy)">{{itemSearchBy}}</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+
+                        <li class="navbar-form">
+                            <label>SORT BY:</label>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default">{{currentSortBy}}</button>
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                    <span class="caret"></span>
+                                    <span class="sr-only">Меню с переключением</span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li ng-repeat="itemSortBy in listHeaderDropdownMenuItems.sortBy">
+                                        <a ng-click="sortByClick(itemSortBy)">{{itemSortBy}}</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+
+                        <li class="navbar-form">
+                            <label>PAGE SIZE:</label>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default">{{currentPageSize}} per page</button>
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                    <span class="caret"></span>
+                                    <span class="sr-only">Меню с переключением</span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li ng-repeat="itemPageSize in listHeaderDropdownMenuItems.pageSize">
+                                        <a ng-click="pageSizeClick(itemPageSize)">{{itemPageSize}} per page</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+
+                        <li class="navbar-form">
+                            <label>Page:</label>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default">{{currentPage}}</button>
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                    <span class="caret"></span>
+                                    <span class="sr-only">Меню с переключением</span>
+                                </button>
+                                <ul class="dropdown-menu scrollable-menu" role="menu">
+                                    <li ng-repeat="itemPage in listHeaderDropdownMenuItems.page">
+                                        <a ng-click="pageClick(itemPage)">{{itemPage}}</a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <label>of {{numberOfPages}}</label>
+
+                            <button type="button" class="btn btn-default" ng-disabled="isDisablePreviousPageButton()" ng-click="previousPageClick()"><</button>
+                            <button type="button" class="btn btn-default" ng-disabled="isDisableNextPageButton()" ng-click="nextPageClick()">></button>
+
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular.min.js"></script>
-        <script src="js/goods.js"></script>
-        <script src="js/controller.js"></script>
-    </body>
+    <div class="col col-md-3" ng-repeat="itemGoods in searchFilteredListGoods = (listGoods | filter:query | orderBy:sortParam)
+    | limitTo : currentPageSize : (currentPage - 1) * currentPageSize">
+        <div class="panel panel-default">
+            <h3 align="center">id: {{itemGoods.id}}</h3>
+            <h3 align="center">title: {{itemGoods.title}}</h3>
+            <h3 align="center">description: {{itemGoods.description}}</h3>
+            <h3 align="center">picture: {{itemGoods.picture}}</h3>
+            <h3 align="center">price: {{itemGoods.price}}</h3>
+        </div>
+    </div>
+    <p>{{searchFilteredListGoods.length}}</p>
+
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular.min.js"></script>
+<script src="js/goods.js"></script>
+<script src="js/controller.js"></script>
+</body>
 </html>
